# bling_api

./: .env.example  .gitignore  README.md  pyproject.toml  teste.py
bling_api/: __init__.py  bling.py  exceptions.py  get_product_info.py  produto.py  settings.py
bling_api/schemas/: __init__.py  campos_customizados.py  get_products.py  produto.py  variacao.py
